--- a/css/style.css
+++ b/css/style.css
@@ -118,7 +118,7 @@ header{
     height: 30px;
 }
 .user-img{
-    background: url(image/image-jonathan.jpg) no-repeat center center;
+    background: url(../image/image-jonathan.jpg) no-repeat center center;
     -webkit-background-size: cover;
     -moz-background-size:cover;
     -o-background-size:cover;
